# Regular-C

./: CMakeLists.txt  conanfile.py
Test/: TestDfa.c  TestNfa.c  TestRegularExpression.c
src/: Automaton.c  Automaton.h  CMakeLists.txt  RegularExpression.c  RegularExpression.h  State.c  State.h  Status.c  Status.h
